--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
@@ -1,7 +1,5 @@
 <section class="modal">
-  <header>
-    <h1>Change password</h1>
-  </header>
+  <h1>Change password</h1>
   <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
 
     <div class="input-container">
@@ -12,11 +10,13 @@
       >Please enter the old password!</p>
 
       <div class="field">
-        <div class="input-icon"></div>
+        <div class="spacer"></div>
         <input id="oldPassword"
         formControlName="oldPassword"
-        type="password">
-        <i class="input-icon fa-solid fa-eye"></i>
+        [type]="oldPassField ? 'password' : 'text'">
+        <div class="input-icon btn" (click)="toggleOldPass()">
+          <i class="input-icon fa-solid fa-eye"></i>
+        </div>
       </div>
     </div>
 
@@ -28,11 +28,13 @@
       >Invalid password!</p>
 
       <div class="field">
-        <div class="input-icon"></div>
+        <div class="spacer"></div>
         <input id="newPassword" 
         formControlName="newPassword"
-        type="password">
-        <i class="input-icon fa-solid fa-eye"></i>
+        [type]="newPassField ? 'password' : 'text'">
+        <div class="input-icon btn" (click)="toggleNewPass()">
+          <i class="input-icon fa-solid fa-eye"></i>
+        </div>
       </div>
       <div class="tooltip">
         <div class="tooltip-text">
@@ -67,11 +69,13 @@
       >Invalid password!</p>
 
       <div class="field">
-        <div class="input-icon"></div>
+        <div class="spacer"></div>
         <input id="reNewPassword" 
         formControlName="reNewPassword"
-        type="password">
-        <i class="input-icon fa-solid fa-eye"></i>
+        [type]="newRePassField ? 'password' : 'text'">
+        <div class="input-icon btn" (click)="toggleNewRePass()">
+          <i class="input-icon fa-solid fa-eye"></i>
+        </div>
       </div>
     </div>
 
