--- a/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.html
+++ b/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.html
@@ -1,7 +1,5 @@
 <section class="modal">
-  <header>
     <h1>Delete account!</h1>
-  </header>
   <form [formGroup]="deleteAccountForm" (ngSubmit)="deleteAccount()">
     <div class="input-container">
       <label for="password">New password</label>
@@ -11,11 +9,13 @@
       >Invalid password!</p>
 
       <div class="field">
-        <div class="input-icon"></div>
+        <div class="spacer"></div>
         <input class="input" id="password" 
         formControlName="password"
-        type="password">
-        <i class="input-icon fa-solid fa-eye"></i>
+        [type]="passField ? 'password' : 'text'">
+        <div class="input-icon" (click)="togglePassField()">
+          <i class="input-icon fa-solid fa-eye"></i>
+        </div>
       </div>
     </div>
     
