--- a/client/src/app/shared/error-banner/error-banner.component.html
+++ b/client/src/app/shared/error-banner/error-banner.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div #container class="container">
   <p class="error-message">{{ errorMessage }}</p>
   <p class="icon">🞬</p>
 </div>
