--- a/client/src/app/auth/profile/change-username-modal/change-username-modal.component.css
+++ b/client/src/app/auth/profile/change-username-modal/change-username-modal.component.css
@@ -14,7 +14,7 @@ form {
   padding: 0 50px;
 }
 
-header {
+h1 {
   text-align: center;
 }
 
@@ -43,14 +43,19 @@ label {
 }
 
 .field {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 30px 280px 30px;
+  gap: 6px;
   height: 30px;
   margin-top: 18px;
 }
 
 .input-icon {
   width: 30px;
+  cursor: pointer;
+}
+
+.input-icon .btn {
   opacity: 40%;
   color: white;
 }
