--- a/client/src/app/coins-view/top-hundred/top-hundred.component.css
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.css
@@ -14,6 +14,7 @@
   margin: 0 auto;
   width: 80%;
   min-width: 600px;
+  max-width: 1600px;
   background-color: #1A1C1D;
   box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
   border-radius: 10px;
