--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -142,6 +142,12 @@ input:-webkit-autofill:focus {
   margin-top: 15px;
 }
 
+.output-field {
+  font-size: 18px;
+  line-height: 1;
+  letter-spacing: 1px;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
