--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,12 +1,42 @@
+.container {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
 h1 {
-  margin-top: 200px;
-  margin-bottom: 280px;
   text-align: center;
   color: white;
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   font-size: 90px;
   letter-spacing: 2px;
+  margin-top: 200px;
+}
+
+.welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  color: white;
+}
+
+.welcome p {
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.welcome .button {
+  background-color: crimson;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 30px;
+  font-size: large;
+  color: white;
+  cursor: pointer;
 }
 
 .card-container {
@@ -14,4 +44,6 @@ h1 {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: last baseline;
+  margin-bottom: 38px;
 }
