--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -7,7 +7,8 @@
   padding: 25px;
   margin: 180px auto;
   width: 80%;
-  min-width: 400px;
+  min-width: 500px;
+  max-width: 1600px;
   background-color: #1A1C1D;
   box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
   border-radius: 10px;
