--- a/client/src/app/portfolio-view/portfolio/portfolio.component.html
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <div class="portfolio-container">
   <div class="portfolio">
-    <div class="title">
+    <header class="title">
       <div class="left-title">
         <h4>Total portfolio value</h4>
         <p>{{ (totalAssetValue$ | async)  | currency:'USD':'symbol':'1.2-2'}}</p>
@@ -11,7 +11,7 @@
           <i class="fa-solid fa-1x fa-plus"></i>
         </div>
       </div>
-    </div>
+    </header>
     <app-portfolio-table></app-portfolio-table>
   </div>
   <div class="modal" *ngIf="(addModalStatus$ | async)" (click)="hideModal($event)">
