--- a/client/src/app/auth/login/login.component.css
+++ b/client/src/app/auth/login/login.component.css
@@ -7,7 +7,7 @@
   width: 460px;
   color: white;
   background-color: #1A1C1D;
-  box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
+  box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
 }
 
