--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -5,6 +5,7 @@
 				<li class="logo"><a routerLink="/home"><img src="/assets/logo-white.png" alt="logo"></a></li>
 			</div>
 			<div class="right-container">
+				<li><a routerLink="/search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
 				<li><a routerLink="/coins/top100">Top 100</a></li>
 				<li><a routerLink="/coins/new-coins">New Coins</a></li>
 				<li><a routerLink="/converter">Crypto Converter</a></li>
