--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,11 +1,19 @@
 <div class="container">
   <h1>Track your crypto gains!</h1>
-  <div class="welcome">
-    <p>Not already a user?</p>
-    <p>Join us now!</p>
-    <a class="button" routerLink="/auth/register">Register</a>
+  <div class="welcome-container">
+    <div class="welcome" 
+    *ngIf="!(user$ | async)">
+      <p>Not already a user?</p>
+      <p>Join us now!</p>
+      <div class="button-containers">
+        <a class="button" routerLink="/auth/register">Register</a>
+        <a class="button" routerLink="/auth/login">Login</a>
+      </div>
+    </div>
   </div>
   <div class="card-container">
-    <app-crypto-card *ngFor="let card of (topThree$ | async)" [card]="card"></app-crypto-card>
+    <app-crypto-card 
+    *ngFor="let card of (topThree$ | async)" 
+    [card]="card"></app-crypto-card>
   </div>
 </div>
