--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
@@ -20,12 +20,19 @@
       </div>
     </div>
 
-    <div class="input-container" appToolTip className="open">
+    <div class="input-container">
       <label for="newPassword">New password</label>
-      <p class="error"
-      *ngIf="!changePasswordForm.get('newPassword')?.valid &&
-      changePasswordForm.get('newPassword')?.touched"
-      >Invalid password!</p>
+      <div class="tooltip" 
+        *ngIf="!changePasswordForm.get('newPassword')?.valid &&
+        changePasswordForm.get('newPassword')?.touched">
+        <h4>Password must contain</h4>
+        <ul>
+            <li><p>one uppercase letter</p></li>
+            <li><p>one lowercase letter</p></li>
+            <li><p>one number and also</p></li>
+            <li><p>must be at least 8 characters long!</p></li>
+        </ul>
+      </div>
 
       <div class="field">
         <div class="spacer"></div>
@@ -36,25 +43,6 @@
           <i class="input-icon fa-solid fa-eye"></i>
         </div>
       </div>
-      <div class="tooltip">
-        <div class="tooltip-text">
-          <h4>Password must contain</h4>
-          <ul>
-            <li>
-              <p>one uppercase letter</p>
-            </li>
-            <li>
-              <p>one lowercase letter</p>
-            </li>
-            <li>
-              <p>one number and also</p>
-            </li>
-            <li>
-              <p>must be at least 8 characters long!</p>
-            </li>
-          </ul>
-        </div>
-      </div>
     </div>
 
     <div class="input-container">
@@ -63,10 +51,6 @@
       *ngIf="changePasswordForm.get('reNewPassword')?.errors?.['passwordDontMatch'] &&
       changePasswordForm.get('reNewPassword')?.touched"
       >Passwords must match!</p>
-      <p class="error"
-      *ngIf="!changePasswordForm.get('reNewPassword')?.valid &&
-      changePasswordForm.get('reNewPassword')?.touched"
-      >Invalid password!</p>
 
       <div class="field">
         <div class="spacer"></div>
