--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
@@ -44,7 +44,7 @@ label {
 
 .field {
   display: grid;
-  grid-template-columns: 30px 280px 30px;
+  grid-template-columns: 30px 1fr 30px;
   gap: 6px;
   height: 30px;
   margin-top: 18px;
@@ -67,7 +67,6 @@ input {
   border-radius: 10px;
   text-align: center;
   border: none;
-  width: 280px;
   height: 20px;
   margin: 0 auto;
 }
@@ -87,31 +86,14 @@ input:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 40rem #313131 inset;
 }
 
-.open .tooltip {
-  visibility: visible;
-  animation-duration: 300ms;
-  animation-name: fadeIn;
-}
-
 .tooltip {
-  position: absolute;
-  visibility: hidden;
-  top: 426px;
-  right: 117px;
+  margin: 0 auto;
   width: 260px;
   padding: 8px;
   padding-left: 28px;
   color: white;
-  background-color: rgba(220, 20, 60, 0.4);
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-@keyframes fadeIn {
-  from {
-    background-color: rgba(220, 20, 60, 0);
-    color: #00000000;
-  }
+  background-color: rgb(220, 20, 60);
+  border-radius: 6px;
 }
 
 .buttons-container {
@@ -144,4 +126,15 @@ input:-webkit-autofill:focus {
 button:disabled {
   background-color: #050505;
   cursor: not-allowed;
+}
+
+@media (max-width: 500px) {
+  .modal {
+    width: 100%;
+    padding: 18px;
+  }
+
+  form {
+    padding: 0;
+  }
 }
