--- a/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
+++ b/client/src/app/auth/profile/delete-user-modal/delete-user-modal.component.css
@@ -43,7 +43,7 @@ label {
 
 .field {
   display: grid;
-  grid-template-columns: 30px 280px 30px;
+  grid-template-columns: 30px 1fr 30px;
   gap: 6px;
   height: 30px;
   margin-top: 18px;
@@ -66,7 +66,6 @@ label {
   border-radius: 10px;
   text-align: center;
   border: none;
-  width: 280px;
   height: 20px;
   margin: 0 auto;
 }
@@ -116,4 +115,15 @@ input:-webkit-autofill:focus {
 button:disabled {
   background-color: #050505;
   cursor: not-allowed;
+}
+
+@media (max-width: 500px) {
+  .modal {
+    width: 100%;
+    padding: 18px;
+  }
+
+  form {
+    padding: 0;
+  }
 }
