--- a/client/src/app/auth/register/register.component.css
+++ b/client/src/app/auth/register/register.component.css
@@ -3,7 +3,6 @@
 }
 
 .register-container {
-  display: block;
   margin: 0 auto;
   width: 460px;
   color: white;
@@ -59,7 +58,7 @@ label {
 
 .field {
   display: grid;
-  grid-template-columns: 30px 280px 30px;
+  grid-template-columns: 30px 1fr 30px;
   gap: 6px;
   height: 30px;
   margin-top: 18px;
@@ -81,7 +80,6 @@ input {
   border-radius: 10px;
   text-align: center;
   border: none;
-  width: 280px;
   height: 20px;
 }
 
@@ -100,31 +98,14 @@ input:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 40rem #313131 inset;
 }
 
-.open .tooltip {
-  visibility: visible;
-  animation-duration: 300ms;
-  animation-name: fadeIn;
-}
-
 .tooltip {
-  position: absolute;
-  visibility: hidden;
-  top: 384px;
-  right: -260px;
+  margin: 0 auto;
   width: 260px;
   padding: 8px;
   padding-left: 28px;
   color: white;
-  background-color: rgba(220, 20, 60, 0.4);
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-@keyframes fadeIn {
-  from {
-    background-color: rgba(220, 20, 60, 0);
-    color: #00000000;
-  }
+  background-color: rgb(220, 20, 60);
+  border-radius: 6px;
 }
 
 .button-container {
@@ -157,4 +138,28 @@ a {
   padding-left: 3px;
   font-weight: bold;
   text-decoration: none;
+}
+
+@media (max-width: 460px) {
+  .container {
+    margin: 100px 0;
+  }
+
+  .register-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  form {
+    padding: 0;
+    width: 100%;
+  }
+
+  .tooltip {
+    width: 80%;
+  }
 }
