--- a/client/src/app/coins-view/coin-data-table/coin-data-table.component.css
+++ b/client/src/app/coins-view/coin-data-table/coin-data-table.component.css
@@ -73,6 +73,7 @@ td {
   left: 70px;
   text-align: left;
   background-color: #1f1f1f;
+  overflow: hidden;
 }
 
 .fourth-col {
@@ -118,4 +119,16 @@ td {
   min-width: 180px;
   max-width: 180px;
   text-align: left;
+}
+
+@media (max-width: 600px) {
+  .third-col {
+    width: 160px;
+    min-width: 160px;
+    max-width: 160px;
+    left: 70px;
+    text-align: left;
+    background-color: #1f1f1f;
+    overflow: hidden;
+  }
 }
