--- a/client/src/app/coins-view/global-data/global-data.component.css
+++ b/client/src/app/coins-view/global-data/global-data.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 28px;
   justify-content: space-evenly;
   color: white;
 }
@@ -12,7 +13,6 @@
   border-radius: 10px;
   box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
   width: 300px;
-  margin-top: 36px;
 }
 
 .top-row-cap {
