--- a/client/src/app/coins-view/new-coins/new-coins.component.css
+++ b/client/src/app/coins-view/new-coins/new-coins.component.css
@@ -25,3 +25,16 @@
   padding: 20px 0px 50px 0px;
   font-weight: 300;
 }
+
+@media (max-width: 800px) {
+  .global-data {
+    width: 90%;
+  }
+
+  .table-component-container {
+    padding: 0;
+    width: 100%;
+    min-width: 320px;
+    border-radius: 0;
+  }
+}
