--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -6,7 +6,7 @@
 	width: 100%;
 	color: white;
 	background-color: #1A1C1D;
-	box-shadow: 6px 4px 31px 19px rgba(0,0,0,0.55);
+	box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
 }
 
 ul {
@@ -15,6 +15,15 @@ ul {
 	justify-content: space-between;
 	align-items: center;
 	list-style: none;
+}
+
+.menu {
+	display: flex;
+	flex-direction: row;
+}
+
+.menu-btn {
+	display: none;
 }
 
 .logo a img {
@@ -37,14 +46,15 @@ ul {
 	text-align: center;
 }
 
-.right-container a {
+.right-container .button {
 	text-decoration: none;
 	padding: 8px;
 	border-radius: 10px;
 	color: white;
+	cursor: pointer;
 }
 
-.right-container a:hover {
+.right-container .button:hover {
 	text-decoration: none;
 	padding: 8px;
 	border-radius: 10px;
@@ -52,6 +62,23 @@ ul {
 	transition: background-color, ease, 600ms;
 }
 
-a {
-	cursor: pointer;
+@media (max-width: 800px) {
+	.right-container:has(.button.open) .menu {
+		display: block;
+		position: absolute;
+		top: 57px;
+		right: 0;
+		background-color: #1A1C1D;
+		border-radius: 6px;
+		padding: 10px;
+		box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
+	}
+
+	.menu-btn {
+		display: block;
+	}
+
+	.menu {
+		display: none;
+	}
 }
