--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -45,8 +45,9 @@ form {
 }
 
 .input {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 30px 1fr 30px;
+  gap: 6px;
   height: 30px;
   position: relative;
 }
@@ -63,7 +64,6 @@ input {
   border-radius: 10px;
   text-align: center;
   border: none;
-  width: 260px;
   height: 20px;
   max-height: 20px;
 }
@@ -86,7 +86,7 @@ input:-webkit-autofill:focus {
 .menu-content {
   display: none;
   position: absolute;
-  width: 300px;
+  width: 260px;
   max-height: 300px;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
@@ -163,4 +163,20 @@ input:-webkit-autofill:focus {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+@media (max-width: 800px) {
+  .container {
+    margin: 80px 0;
+  }
+
+  .converter {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  form {
+    border-radius: 0;
+    padding: 0;
+  }
 }
