--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -14,32 +14,45 @@ h1 {
   font-size: 90px;
   letter-spacing: 2px;
   margin-top: 200px;
+  margin-bottom: 30px;
+  padding: 0 24px;
 }
 
-.welcome-container, .welcome {
+.welcome {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 12px;
   color: white;
-  background-color: #1a1c1d;
   padding: 18px 0;
+  position: relative;
+  isolation: isolate;
 }
+
+.welcome::before {
+  content: '';
+  display: block;
+  background-image: linear-gradient(45deg, #6e0a1e, #160206, #6e0a1e);
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  transform: skewY(-3deg);
+} 
 
 .welcome p {
   font-size: 24px;
   font-weight: 300;
 }
 
-.button-containers {
+.button-container {
   display: flex;
   flex-direction: row;
   gap: 18px;
 }
 
 .welcome .button {
-  background-color: crimson;
+  background-color: #dc143c;
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
